revised: IDE startup: Mouse/Screnncapture check